--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,14 @@
 [workspace]
-members = ["day01", "day02", "day03", "day04", "day05", "day06", "day07"]
+members = [
+    "day01",
+    "day02",
+    "day03",
+    "day04",
+    "day05",
+    "day06",
+    "day07",
+    "day08"
+]
 
 [profile.release]
 lto = true
