--- a/day10/Cargo.toml
+++ b/day10/Cargo.toml
@@ -5,4 +5,5 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
+fnv = "1.0.7"
 lru = "0.6.1"
