--- a/day14/Cargo.toml
+++ b/day14/Cargo.toml
@@ -5,3 +5,5 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
+fnv = "1.0.7"
+itertools = "0.9.0"
